--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Froman Hot Rods</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Froman Hot Rods</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -35,10 +35,10 @@
 				<div class="content">
 					<header>
 						<h2>Hey.</h2>
-					</header>
+					<!--</header>
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
 					by <a href="https://html5up.net">HTML5 UP</a>, built on <a href="http://skel.io">Skel</a>,
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>-->
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
