--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Froman Hot Rods</h2>
 					<!--</header>
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
 					by <a href="https://html5up.net">HTML5 UP</a>, built on <a href="http://skel.io">Skel</a>,
@@ -51,9 +51,9 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>-->
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -64,9 +64,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+					<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					id varius justo euismod in. Curabitur egestas consectetur magna.</p>-->
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -76,9 +76,9 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+						<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>-->
 					</header>
 
 					<!-- Gallery  -->
