--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+						<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>-->
 					</header>
 
 					<!-- Gallery  -->
@@ -111,7 +111,7 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>Have questions? We have answers! We would love to hear from you!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -134,14 +134,14 @@
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<!--<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>-->
+						<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Froman Hot Rods</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
 					</ul>
 
 			</footer>
