--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 						<p>We have answers! We would love to hear from you!</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
-							<div class="field half first"><input type="text" name="name" placeholder="Name" /></div>
-							<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-							<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
+						<form method="POST" action="https://formspree.io/fromanhotrods@gmail.com">
+							<div class="field half first"><input type="text" name="name" id="name" placeholder="Name" /></div>
+							<div class="field half"><input type="email" name="email" id="email" placeholder="Email" /></div>
+							<div class="field"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
 							<ul class="actions">
 								<li><input type="submit" value="Send Message" /></li>
 							</ul>
